force-app/main/default/objects/CampaignMember/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <formula>Contact.Billing_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact</label>
    <type>Checkbox</type>
</CustomField>