force-app/main/default/objects/CampaignMember/fields/Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact__c</fullName>
    <formula>Contact.Business_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Contact</label>
    <type>Checkbox</type>
</CustomField>