force-app/main/default/objects/CampaignMember/fields/Contact_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Contact_Campaign__c</fullName>
    <formula>Contact.pi__campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Campaign</label>
    <type>Text</type>
</CustomField>