force-app/main/default/objects/CampaignMember/fields/CreatedMonth__c.field-meta.xml
<CustomField>
    <fullName>CreatedMonth__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate))) 
&amp; &quot;-&quot; &amp; 
LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedMonth</label>
    <type>Text</type>
</CustomField>