force-app/main/default/objects/CampaignMember/fields/Project_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Notes__c</fullName>
    <description>Enter in notes for the project as it relates to this contact. Be sure to include a date, if applicable.</description>
    <label>Project Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>