force-app/main/default/objects/CampaignMember/fields/Technical_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Contact__c</fullName>
    <formula>Contact.Technical_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Contact</label>
    <type>Checkbox</type>
</CustomField>